--- a/Labs/Lab9-Stable Diffusion Customizing/tutorial.ipynb
+++ b/Labs/Lab9-Stable Diffusion Customizing/tutorial.ipynb
@@ -123,6 +123,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "device = \"mps\""
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "id": "qF8I5k4BrmGJ"
@@ -1811,7 +1820,7 @@
   },
   "gpuClass": "standard",
   "kernelspec": {
-   "display_name": "generative_ai",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -1825,7 +1834,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
